making sure the message ping-pong between "content" and "popup" works

--- a/popup.html
+++ b/popup.html
@@ -13,9 +13,12 @@
             ➕ Add race results to More Cars
         </div>
         <div class="card-body">
-            ...
+            <div id="resultsList">
+                ...
+            </div>
         </div>
     </div>
 </div>
+<script src="popup.js"></script>
 </body>
 </html>
