extract (and render) ALL race results of the selected session

--- a/popup.html
+++ b/popup.html
@@ -6,8 +6,8 @@
     <script src="libs/jquery_v3.4.1.js"></script>
     <script src="libs/bootstrap.js"></script>
 </head>
-<body style="width:600px">
-<div class="container my-3">
+<body style="width:700px">
+<div class="m-3">
     <div class="card mb-3">
         <div class="card-header">
             ➕ Add race results to More Cars
