load and display all racing events of the selected racing series

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,17 @@
 <div class="m-3">
     <div class="card mb-3">
         <div class="card-header">
-            ➕ Add race results to More Cars
+            1. Select racing event
+        </div>
+        <div class="card-body">
+            <div id="racingEventList">
+                ...
+            </div>
+        </div>
+    </div>
+    <div class="card mb-3">
+        <div class="card-header">
+            2. Check the extracted data
         </div>
         <div class="card-body">
             <div id="resultsList">
