load and display all sessions of the selected racing event

--- a/popup.html
+++ b/popup.html
@@ -10,11 +10,27 @@
 <div class="m-3">
     <div class="card mb-3">
         <div class="card-header">
-            1. Select racing event
+            1. Select racing event session
         </div>
         <div class="card-body">
-            <div id="racingEventList">
-                ...
+            <div class="form-group">
+                <label>Select Racing Series</label>
+                <select class="form-control" id="racingSeriesList">
+                    <option selected disabled>--- Select Racing Series ---</option>
+                    <option value="661">DTM</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Select Racing Event</label>
+                <select class="form-control" id="racingEventList">
+                    <!-- dynamically filled -->
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Select Session</label>
+                <select class="form-control" id="racingEventSessionsList">
+                    <!-- dynamically filled -->
+                </select>
             </div>
         </div>
     </div>
@@ -24,7 +40,7 @@
         </div>
         <div class="card-body">
             <div id="resultsList">
-                ...
+                <!-- dynamically filled -->
             </div>
         </div>
     </div>
