--- a/popup.html
+++ b/popup.html
@@ -34,6 +34,7 @@
             </div>
         </div>
     </div>
+
     <div class="card mb-3">
         <div class="card-header">
             2. Check the extracted data
@@ -42,6 +43,17 @@
             <div id="resultsList">
                 <!-- dynamically filled -->
             </div>
+        </div>
+    </div>
+
+    <div class="card mb-3">
+        <div class="card-header">
+            3. Submit the data
+        </div>
+        <div class="card-body">
+            <button id="addResults" class="btn btn-danger">
+                Add these results to More Cars
+            </button>
         </div>
     </div>
 </div>
