in order to submit data to More Cars the user needs to provide an access token

--- a/popup.html
+++ b/popup.html
@@ -54,6 +54,29 @@
             <button id="addResults" class="btn btn-danger">
                 Add these results to More Cars
             </button>
+
+            <hr>
+
+            🔒 Access token
+            <p>
+                In order to interact with the »More Cars« database you need permission first.
+                <br><br>
+                1. Join More Cars <a href="https://more-cars.net/join">more-cars.net/join</a>
+                <br>
+                2. Go to the garage <a href="https://more-cars.net/home">more-cars.net/home</a>
+                <br>
+                3. Create an access token
+                <br>
+                4. Copy the access token
+                <br>
+                5. Paste it here and save
+            </p>
+            <div class="form-group">
+                <input id="accessTokenInput" placeholder="Your Access Token" class="form-control">
+            </div>
+            <button id="saveAccessToken" class="btn btn-warning">
+                Save Access Token
+            </button>
         </div>
     </div>
 </div>
