add label targets

--- a/popup.html
+++ b/popup.html
@@ -14,20 +14,20 @@
         </div>
         <div class="card-body">
             <div class="form-group">
-                <label>Select Racing Series</label>
+                <label for="racingSeriesList">Select Racing Series</label>
                 <select class="form-control" id="racingSeriesList">
                     <option selected disabled>--- Select Racing Series ---</option>
                     <option value="661">DTM</option>
                 </select>
             </div>
             <div class="form-group">
-                <label>Select Racing Event</label>
+                <label for="racingEventList">Select Racing Event</label>
                 <select class="form-control" id="racingEventList">
                     <!-- dynamically filled -->
                 </select>
             </div>
             <div class="form-group">
-                <label>Select Session</label>
+                <label for="racingEventSessionsList">Select Session</label>
                 <select class="form-control" id="racingEventSessionsList">
                     <!-- dynamically filled -->
                 </select>
