show progress bar when uploading the race results

--- a/popup.html
+++ b/popup.html
@@ -54,6 +54,12 @@
             <button id="addResults" class="btn btn-danger">
                 Add these results to More Cars
             </button>
+            <br>
+            <br>
+
+            <div class="progress">
+                <div id="uploadProgress" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"></div>
+            </div>
 
             <hr>
 
