disable the submit button until the user has selected a race session

--- a/popup.html
+++ b/popup.html
@@ -51,7 +51,7 @@
             3. Submit the data
         </div>
         <div class="card-body">
-            <button id="addResults" class="btn btn-danger">
+            <button id="addResults" class="btn btn-danger" disabled>
                 Add these results to More Cars
             </button>
             <br>
