filling the "racing series" dropdown list dynamically

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
                 <label for="racingSeriesList">Select Racing Series</label>
                 <select class="form-control" id="racingSeriesList">
                     <option selected disabled>--- Select Racing Series ---</option>
-                    <option value="661">DTM</option>
+                    <!-- dynamically filled -->
                 </select>
             </div>
             <div class="form-group">
