--- a/popup.html
+++ b/popup.html
@@ -41,6 +41,9 @@
         </div>
         <div class="card-body">
             <div id="resultsList">
+                <div class="alert alert-danger mb-0">
+                    Could not find any race result information on this page!
+                </div>
                 <!-- dynamically filled -->
             </div>
         </div>
