when the user selects a racing session we have to determine the number of race results that are already connected to it

--- a/popup.html
+++ b/popup.html
@@ -32,6 +32,7 @@
                     <!-- dynamically filled -->
                 </select>
             </div>
+            <div id="raceResultCount" class="d-none"></div>
         </div>
     </div>
 
