introducing error handling -> it should not be possible to trigger the upload when no race results could be extracted from the current page

--- a/popup.html
+++ b/popup.html
@@ -61,6 +61,8 @@
             <br>
             <br>
 
+            <div id="errorBox" class="alert alert-danger d-none"></div>
+
             <div class="progress">
                 <div id="uploadProgress" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"></div>
             </div>
